--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row form">
   <div class="col-lg-12">
-    <%= form_for(@answer) do |f| %>
+    <%= form_for([@question, @answer]) do |f| %>
       <h3><span>Q</span><%= @question.text %></h3>
       <div class="form-group">
         <%= f.text_area :text, placeholder: "回答を入力してください", cols:"30", rows:"10", autofocus:"true", class:"form-control" %>
