--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -14,9 +14,6 @@
     <div class="questioned">
       <span>回答<%= question.answers.count %>件</span>
     </div>
-    <%= form_tag(new_answer_path, method: :get, class: "question_submit") do %>
-      <%= hidden_field_tag(:question_id, question.id) %>
-      <%= submit_tag("回答する") %>
-    <% end %>
-  </div>
+    <%= link_to '回答する', new_question_answer_path(question)  %>
+   </div>
 </div>
